--- a/templates/correct.html
+++ b/templates/correct.html
@@ -25,7 +25,7 @@
 <div class="container">
     <h1>Congratulation, your answer is correct!</h1>
     <form action="/main" method="post">
-        <p><input type="submit" value="main"></p>
+        <p><input type="submit" value="Main"></p>
     </form>
     <form action="/end" method="post">
         <p><input type="submit" value="End"></p>
