--- a/templates/query.html
+++ b/templates/query.html
@@ -23,12 +23,12 @@
 
 <html>
 <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/Wiki%2C_wiki%2C_wiki%2C_wiki_logo.jpg" width="300" height="200"> 
-    <h1>My First Proper with responsive Cloud based Web application</h1>
+    <h1>{{text}}</h1>
     <form action="/main" method="post">
-        <p><h2>welcome to Hugging Face Ethical Test, my name is Thousand Ask. May I know your name?</h2></p>
-        <p><input type="text" name="name"></p>
-        <p><input type="submit" value="Enter"></p>
+        <p><input type="submit" value="Main"></p>
+    </form>
+    <form action="/end" method="post">
+        <p><input type="submit" value="End"></p>
     </form>
 </div>
 </html>
