--- a/templates/deleteDB.html
+++ b/templates/deleteDB.html
@@ -23,23 +23,11 @@
 
 <html>
 <div class="container">
-    <h1>Hi {{name}}, how can I help you today?</h1>
-    <form action="/ethical_test" method="post">
-        <p><input type="submit" value="Ethical Test"></p>
-    </form>
+    <h1>ALL data deleted from employee table</h1>
     
-    <form action="/query" method="post">
-        <p><input type="submit" value="Query"></p>
+    <form action="/main" method="post">
+        <p><input type="submit" value="Main"></p>
     </form>
-
-    <form action="/delete" method="post">
-        <p><input type="submit" value="Delete Database"></p>
-    </form>
-
-    <form action="/foodexp" method="post">
-        <p><input type="submit" value="Food Expenditure"></p>
-    </form>
-
 
     <form action="/end" method="post">
         <p><input type="submit" value="End"></p>
