--- a/templates/main.html
+++ b/templates/main.html
@@ -40,6 +40,9 @@
         <p><input type="submit" value="Food Expenditure"></p>
     </form>
 
+    <form action="/music" method="post">
+        <p><input type="submit" value="Music Generator"></p>
+    </form>
 
     <form action="/end" method="post">
         <p><input type="submit" value="End"></p>
